# Unit-Converter

./: .gitignore  README.md  Unit Converter.txt  main.py  pyproject.toml  unit_converter_core5_docs.md  unit_converter_docs.md
Schema/: README.md  conversion-request.schema.json  conversion-result.schema.json  dimension.schema.json  quantity.schema.json  registry.schema.json  schema-manifest.json  unit.schema.json
src/strictunits/: __init__.py  cli.py  conversion.py  dimensions.py  exceptions.py  formatting.py  parser.py  quantity.py  registry.py  units.py
tests/: test_cli_conversion.py  test_conversion.py  test_dimensions.py  test_registry_parser_formatting.py  test_units_quantity.py
